--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 </nav>
             </aside>
             <nav class="header__navpc">
+                <div class="header__navpc--logo"></div>
                 <ul class="header__navpc--box">
                     <li><a class="header__navpc--box-element" id="menu__link--startseite-pc" href="#startseite">startseite</a></li>
                     <li><a class="header__navpc--box-element" id="menu__link--über-mich-pc" href="#über-mich">über mich</a></li>
