dodanie sekcji break1 i poprawa menu

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <ul class="header__navmobile--box">
                         <li><a href="#header" class="header__navmobile--box-element startseite" id="menu__link--startseite">startseite</a></li>
                         <li><a href="#über-mich" class="header__navmobile--box-element übermich" id="menu__link--über-mich">über mich</a></li>
-                        <li><a href="#" class="header__navmobile--box-element leistungen">leistung</a></li>
-                        <li><a href="#" class="header__navmobile--box-element angebot">angebot</a></li>
-                        <li><a href="#" class="header__navmobile--box-element kariere">kariere</a></li>
-                        <li><a href="#" class="header__navmobile--box-element kontakt">kontakt</a></li>
+                        <li><a href="#leistungen" class="header__navmobile--box-element leistungen" id="menu__link--leistungen">leistung</a></li>
+                        <li><a href="#angebot" class="header__navmobile--box-element angebot" id="menu__link--angebot">angebot</a></li>
+                        <li><a href="#kariere" class="header__navmobile--box-element kariere" id="menu__link--kariere">kariere</a></li>
+                        <li><a href="#kontakt" class="header__navmobile--box-element kontakt" id="menu__link--kontakt">kontakt</a></li>
                     </ul>
                     <div class="header__navmobile--footer">
                         <a target="blank" href="https://www.facebook.com"><div class="header__navmobile--footer-fb ico"></div></a>
@@ -52,11 +52,24 @@
                 <ul class="header__navpc--box">
                     <li><a class="header__navpc--box-element" id="menu__link--startseite-pc" href="#startseite">startseite</a></li>
                     <li><a class="header__navpc--box-element" id="menu__link--über-mich-pc" href="#über-mich">über mich</a></li>
-                    <li><a class="header__navpc--box-element" href="">leistungen</a></li>
-                    <li><a class="header__navpc--box-element" href="">abgebot</a></li>
-                    <li><a class="header__navpc--box-element" href="">kariere</a></li>
-                    <li><a class="header__navpc--box-element" href="">kontakt</a></li>
+                    <li><a class="header__navpc--box-element" id="menu__link--leistungen-pc" href="#leistungen">leistungen</a></li>
+                    <li><a class="header__navpc--box-element" id="menu__link--angebot-pc" href="#angebot">abgebot</a></li>
+                    <li><a class="header__navpc--box-element" id="menu__link--kariere-pc" href="#kariere">kariere</a></li>
+                    <li><a class="header__navpc--box-element" id="menu__link--kontatk-pc" href="#kontakt">kontakt</a></li>
                 </ul>
+            </nav>
+            <nav class="header__navpcbgc active">
+                <div class="header__navpcbgc--wrapper">
+                    <div class="header__navpcbgc--wrapper--logo"></div>
+                    <ul class="header__navpcbgc--wrapper--box">
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--startseite-pc-float" href="#startseite">startseite</a></li>
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--über-mich-pc-float" href="#über-mich">über mich</a></li>
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--leistungen-pc-float" href="#leistungen">leistungen</a></li>
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--angebot-pc-float" href="#angebot">abgebot</a></li>
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--kariere-pc-float" href="#kariere">kariere</a></li>
+                        <li><a class="header__navpcbgc--wrapper--box-element" id="menu__link--kontakt-pc-float" href="#kontakt">kontakt</a></li>
+                    </ul>
+                </div>
             </nav>
             <div class="header__text">
                 <h1 class="header__text--herotext">Finanzarchitektur by Johannes Placzek</h1>
@@ -71,8 +84,7 @@
                     <div class="ich__wrapper--content-rahmen">
                         <div class="ich__wrapper--content-rahmen__foto"></div>
                     </div>
-                    <div class="ich__wrapper--contetn-ueber">
-                        <p>Mein Name  ist Johannes Placzek.
+                    <p class="ich__wrapper--content-ueber">Mein Name  ist Johannes Placzek.
  
                             Angefangen habe ich als Schreinerlehrling in einem 
                             Betrieb in meiner Heimat – dem Schwarzwald.
@@ -92,17 +104,19 @@
                             gehe ich diesen Weg. 
                             Dabei steht der Spaß und  die Gemeinschaft 
                             stets im Vordergrund und wird täglich von uns gelebt. </p>
-                    </div>
-                    <div class="ich__wrapper--content-promovideo"></div>
-                    <div class="ich__wrapper--content-kontakt">
-                        <p class="ich__wrapper--content-kontakt__text">Du hast auch große Träume? Erfolg? Karriere? Freiheit?
-                            Du willst deinen eigenen Weg gehen und neue Abenteuer erleben?</p>
-                        <p class="ich__wrapper--content-kontakt__text-action">Nimm jetzt deine Zukunft in die Hand und komm mit!</p>
-                        <button class="button ich__wrapper--content-kontakt__button">kontakt</button>
-                    </div>
+                </div>
+                <div class="ich__wrapper--content-promovideo"></div>
+                <div class="ich__wrapper--content-kontakt">
+                    <p class="ich__wrapper--content-kontakt__text">Du hast auch große Träume? Erfolg? Karriere? Freiheit?
+                        Du willst deinen eigenen Weg gehen und neue Abenteuer erleben?</p>
+                    <p class="ich__wrapper--content-kontakt__text-action">Nimm jetzt deine Zukunft in die Hand und komm mit!</p>
+                    <button class="button ich__wrapper--content-kontakt__button">kontakt</button>
                 </div>
             </div>
         </section>
+        <section class="break__logo">
+        </section>
+        <section class="leistung" id="leistungen"></section>
     </main>
 
 
