--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <nav class="header__navmobile">
                     <div class="header__logo header__logo-menumobile"></div>
                     <ul class="header__navmobile--box">
-                        <li><a href="#header" class="header__navmobile--box-element startseite" id="menu__link--startseite">startseite</a></li>
-                        <li><a href="#über-mich" class="header__navmobile--box-element übermich" id="menu__link--über-mich">über mich</a></li>
-                        <li><a href="#leistungen" class="header__navmobile--box-element leistungen" id="menu__link--leistungen">leistung</a></li>
-                        <li><a href="#angebot" class="header__navmobile--box-element angebot" id="menu__link--angebot">angebot</a></li>
-                        <li><a href="#kariere" class="header__navmobile--box-element kariere" id="menu__link--kariere">kariere</a></li>
-                        <li><a href="#kontakt" class="header__navmobile--box-element kontakt" id="menu__link--kontakt">kontakt</a></li>
+                        <li><a href="#header" class="header__navmobile--box-element" id="menu__link--startseite">startseite</a></li>
+                        <li><a href="#über-mich" class="header__navmobile--box-element" id="menu__link--über-mich">über mich</a></li>
+                        <li><a href="#leistungen" class="header__navmobile--box-element" id="menu__link--leistungen">leistung</a></li>
+                        <li><a href="#angebot" class="header__navmobile--box-element" id="menu__link--angebot">angebot</a></li>
+                        <li><a href="#kariere" class="header__navmobile--box-element" id="menu__link--kariere">kariere</a></li>
+                        <li><a href="#kontakt" class="header__navmobile--box-element" id="menu__link--kontakt">kontakt</a></li>
                     </ul>
                     <div class="header__navmobile--footer">
                         <a target="blank" href="https://www.facebook.com"><div class="header__navmobile--footer-fb ico"></div></a>
@@ -78,8 +78,8 @@
             </div>
         </section>
         <section class="ich" id="über-mich">
-            <div class="ich__wrapper">
-                <h2 class="ich__wrapper--heading">Über Mich</h2>
+            <div class="ich__wrapper wrapper">
+                <h2 class="ich__wrapper--heading heading">Über Mich</h2>
                 <div class="ich__wrapper--content">
                     <div class="ich__wrapper--content-rahmen">
                         <div class="ich__wrapper--content-rahmen__foto"></div>
@@ -114,9 +114,75 @@
                 </div>
             </div>
         </section>
-        <section class="break__logo">
+        <section class="break__logo break">
         </section>
-        <section class="leistung" id="leistungen"></section>
+        <section class="leistung" id="leistungen">
+            <div class="leistung__wrapper wrapper">
+                <h2 class="leistung__wrapper--heading heading">Du baust auf jahrelange Erfahrung im Finanzsektor.</h2>
+                <p class="leistung__wrapper--text">In folgenden Themengebieten wurden die Mitarbeiter der 
+                    Finanzarchitektur Nagold par excellence ausgebildet, weitergebildet und 
+                    immer auf den aktuellen Stand gebracht.</p>
+                <div class="leistung__wrapper--elemente">
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Arbeitskraftabsicherung</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Altersvorsorge</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Bausparen</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Firmenkundenberatung</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Gesundheitsabsicherung</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Immobilien</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Immobilienfinanzierung</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Investment</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Privat- Konsumkredit</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Staatliche Förderung</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Steuerersparnisse</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Stron & Gas</p>
+                    </div>
+                    <div class="leistung__wrapper--elemente-element">
+                        <p class="leistung__wrapper--elemente-element__text">Versicherungen</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="break__philosophie break">
+            <div class="break__philosophie--bg break"></div>
+            <div class="break__philosophie--wrapper wrapper">
+                <h2 class="break__philosophie--wrapper-heading">Philosophie</h2>
+                <p class="break__philosophie--wrapper-text">Die Philosophie unseres Unternehmens liegt darin jedem Menschen die Möglichkeit zu 
+                geben, nicht nur nachhaltig mehr Geld zu besitzen sondern durch passives Wachstum immer 
+                neue Lebensziele zu erschaffen. Diese Idee verdanken wir der heutigen Zeit, in der sich immer mehr Menschen mit dem 
+                Thema “passives Einkommen” und “Zielen” auseinander setzen. Das Problem bisher: “Wie 
+                funktioniert das?” Ähnlich wie bei den verschiedensten Sportarten möchte jeder mit reden, 
+                jedoch die wenigsten haben wirklich Ahnung von dem was Sie erzählen oder sogar tun.
+                
+                Die Finanzarchitektur garantiert dir Exklusivität die du bisher noch nie erlebt hast. Es geht 
+                nicht mehr nur um das Geld sondern viel mehr um deine Ziele und deren Verwirklichung.</p>
+            </div>
+            
+        </section>
+        <section class="angebot" id="angebot"></section>
     </main>
 
 
