--- a/index.html
+++ b/index.html
@@ -182,7 +182,50 @@
             </div>
             
         </section>
-        <section class="angebot" id="angebot"></section>
+        <section class="angebot" id="angebot">
+            <div class="angebot__wrapper wrapper">
+                <h2 class="angebot__wrapper--heading">Unsere Beratungskonzept</h2>
+                <p class="angebot__wrapper--text">Unsere Beratungskonzept ist aus 5 Schritten aufgebaut</p>
+                <div class="angebot__wrapper--elementeMobile">
+                    <div class="angebot__wrapper--elementeMobile__element">
+                        <div class="angebot__wrapper--elementeMobile__element-symbol">
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__ico analyse__ico"></div>
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__text"><p>1. Analyse</p> </div>
+                        </div>
+                        <p class="angebot__wrapper--elementeMobile__element-description">Erfassen der Ist-Situation mit den individuellen Wünschen und Zielen des Kunden</p>
+                    </div>
+                    <div class="angebot__wrapper--elementeMobile__element">
+                        <div class="angebot__wrapper--elementeMobile__element-symbol">
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__ico planung__ico"></div>
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__text"><p>2. Planung</p> </div>
+                        </div>
+                        <p class="angebot__wrapper--elementeMobile__element-description">Auswertung und Vermögensplanung mit Qualitätssiegel</p>
+                    </div>
+                    <div class="angebot__wrapper--elementeMobile__element">
+                        <div class="angebot__wrapper--elementeMobile__element-symbol">
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__ico beratung__ico"></div>
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__text"><p>3. Beratung</p> </div>
+                        </div>
+                        <p class="angebot__wrapper--elementeMobile__element-description">Persönliche Beratung, abgestimmt auf die individuellen Wünsche und Ziele des Kunden</p>
+                    </div>
+                    <div class="angebot__wrapper--elementeMobile__element">
+                        <div class="angebot__wrapper--elementeMobile__element-symbol">
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__ico umsetzung__ico"></div>
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__text"><p>4. Umsetzung</p> </div>
+                        </div>
+                        <p class="angebot__wrapper--elementeMobile__element-description">Realisierung der Vermögensplanung</p>
+                    </div>
+                    <div class="angebot__wrapper--elementeMobile__element">
+                        <div class="angebot__wrapper--elementeMobile__element-symbol">
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__ico partnerschaft__ico"></div>
+                            <div class="angebot__wrapper--elementeMobile__element-symbol__text"><p>5. Partnerschaft</p> </div>
+                        </div>
+                        <p class="angebot__wrapper--elementeMobile__element-description">Dauerhafte Betreuung und Partnerschaft</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="kontakt" id="kontakt"></section>
     </main>
 
 
