--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        
     <main>
         <div class="fsvideo">
-            <video class="fsvideo__video" autoplay muted loop src="video/promovideo.mp4"></video>
+            <video class="fsvideo__video" autoplay muted loop playsinline src="video/promovideo.mp4"></video>
         </div>
         <section class="header" id="header">
             <div class="header__logo header__logo-mobilelandscape"></div>
@@ -223,6 +223,55 @@
                         <p class="angebot__wrapper--elementeMobile__element-description">Dauerhafte Betreuung und Partnerschaft</p>
                     </div>
                 </div>
+                <div class="angebot__wrapper--elementePc">
+                    <div class="angebot__wrapper--elementePc-linieA">
+                        <div class="angebot__wrapper--elementePc-linieA--elementA" id="angebot__element1">
+                            <div class="angebot__wrapper--elementePc-linieA--elementA-symbol__ico analyse__ico"></div>
+                            <div class="angebot__wrapper--elementePc-linieA--elementA-text"><p>1. Analyse</p></div>
+                        </div>
+                    </div>
+                    <div class="angebot__wrapper--elementePc-linieB">
+                        <div class="angebot__wrapper--elementePc-linieB-elementA">
+                            <div class="angebot__wrapper--elementePc-linieB--elementA" id="angebot__element5">
+                                <div class="angebot__wrapper--elementePc-linieB--elementA-symbol__ico partnerschaft__ico"></div>
+                                <div class="angebot__wrapper--elementePc-linieB--elementA-text"><p>5. Partnerschaft</p></div>
+                            </div>
+                        </div>
+                        <div class="angebot__wrapper--elementePc-linieB-elementB">
+                            <div class="angebot__wrapper--elementePc-linieB-elementB--text1">
+                                <p class="angebot__wrapper--elementePc-linieB-elementB--text1-title" id="angebot__heading">1. Analyse</p>
+                                <p class="angebot__wrapper--elementePc-linieB-elementB--text1-text" id="angebot__text">Erfassen der Ist-Situation mit den individuellen Wünschen und Zielen des Kunden</p>
+                            </div>
+                            <div class="angebot__wrapper--elementePc-linieB-elementB--text5">
+                                <p class="angebot__wrapper--elementePc-linieB-elementB--text5-title">5. Partnerschaft</p>
+                                <p class="angebot__wrapper--elementePc-linieB-elementB--text5-text">Dauerhafte Betreuung und Partnerschaft</p>
+                            </div>
+                        </div>
+                        <div class="angebot__wrapper--elementePc-linieB-elementC">
+                            <div class="angebot__wrapper--elementePc-linieB-elementC" id="angebot__element2">
+                                <div class="angebot__wrapper--elementePc-linieB--elementC">
+                                <div class="angebot__wrapper--elementePc-linieB--elementC-symbol__ico planung__ico"></div>
+                                <div class="angebot__wrapper--elementePc-linieB--elementC-text"><p>2. Planung</p></div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="angebot__wrapper--elementePc-linieC">
+                        <div class="angebot__wrapper--elementePc-linieC-elementA">
+                            <div class="angebot__wrapper--elementePc-linieC--elementA" id="angebot__element4">
+                                <div class="angebot__wrapper--elementePc-linieC--elementA-symbol__ico umsetzung__ico"></div>
+                                <div class="angebot__wrapper--elementePc-linieC--elementA-text"><p>4. Umsetzung</p></div>
+                            </div>
+                        </div>
+                        <div class="angebot__wrapper--elementePc-linieC-elementB">
+                            <div class="angebot__wrapper--elementePc-linieC--elementB" id="angebot__element3">
+                                <div class="angebot__wrapper--elementePc-linieC--elementB-symbol__ico beratung__ico"></div>
+                                <div class="angebot__wrapper--elementePc-linieC--elementB-text"><p>3. Beratung</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="angebot__wrapper--text">Jakiś tekst o tym, że finanzaufbau to długa droga, trzeba razem sie komunikować, współpracować, patrzeć w przyszłość i reagować na ciągle zmieniającą się sytuacje na rynku.</p>
             </div>
         </section>
         <section class="kontakt" id="kontakt"></section>
