--- a/index.html
+++ b/index.html
@@ -274,7 +274,43 @@
                 <p class="angebot__wrapper--text">Jakiś tekst o tym, że finanzaufbau to długa droga, trzeba razem sie komunikować, współpracować, patrzeć w przyszłość i reagować na ciągle zmieniającą się sytuacje na rynku.</p>
             </div>
         </section>
-        <section class="kontakt" id="kontakt"></section>
+        <section class="kontakt" id="kontakt">
+            <div class="kontakt__wrapper wrapper">
+                <h2 class="kontakt__wrapper--heading">Bessere Zukunft liegt in deinen Händen</h2>
+                <p class="kontakt__wrapper--text">Zusammen mit Finanzarchitektur Placzek sind Sie auf guten weg …
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata</p>
+                <div class="kontakt__wrapper--elemente">
+                    <div class="kontakt__wrapper--elemente-elementeLeft">
+                        <div class="kontakt__wrapper--elemente-elementeLeft_mail">
+                            <div class="kontakt__wrapper--elemente-elementeLeft_mail-ico"></div>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_mail-heading"><span>Mail:</span></p>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_mail-text kontaktText">info@finanzarchitektur-placzek.de</p>
+                        </div>
+                        <div class="kontakt__wrapper--elemente-elementeLeft_phone">
+                            <div class="kontakt__wrapper--elemente-elementeLeft_phone-ico"></div>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_phone-heading"><span>Telefon:</span></p>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_phone-text kontaktText">+49 176 64722607</p>
+                        </div>
+                        <div class="kontakt__wrapper--elemente-elementeLeft_adresse">
+                            <div class="kontakt__wrapper--elemente-elementeLeft_adresse-ico"></div>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_adresse-heading"><span>Adresse:</span></p>
+                            <p class="kontakt__wrapper--elemente-elementeLeft_adresse-text kontaktText">Kämmerle 15 <br>
+                                72229 Rohrdorf</p>
+                        </div>
+                    </div>
+                    <div class="kontakt__wrapper--elemente-elementeRight">
+                        <iframe class="kontakt__wrapper--elemente-elementeRight_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2640.202849450369!2d8.69605131586181!3d48.567663529086445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479735b75b8d67c3%3A0xcfe270e40d1d8fbb!2sFinanzarchitektur!5e0!3m2!1sde!2sde!4v1576875654220!5m2!1sde!2sde" frameborder="0" allowfullscreen=""></iframe> 
+                        <div class="kontakt__wrapper--elemente-elementeRight_clock">
+                            <div class="kontakt__wrapper--elemente-elementeRight_clock-ico"></div>
+                            <p class="kontakt__wrapper--elemente-elementeRight_clock-heading"><span>Öffnungszeiten</span></p>
+                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Mo - Mi: 9:00-12:30 / 14:30-17:30</p>
+                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Do - Fr: 9:00-12:30 </p>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
