--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li><a class="header__navpc--box-element" id="menu__link--leistungen-pc" href="#leistungen">leistungen</a></li>
                     <li><a class="header__navpc--box-element" id="menu__link--angebot-pc" href="#angebot">abgebot</a></li>
                     <li><a class="header__navpc--box-element" id="menu__link--kariere-pc" href="#kariere">kariere</a></li>
-                    <li><a class="header__navpc--box-element" id="menu__link--kontatk-pc" href="#kontakt">kontakt</a></li>
+                    <li><a class="header__navpc--box-element" id="menu__link--kontakt-pc" href="#kontakt">kontakt</a></li>
                 </ul>
             </nav>
             <nav class="header__navpcbgc active">
@@ -74,7 +74,7 @@
             <div class="header__text">
                 <h1 class="header__text--herotext">Finanzarchitektur by Johannes Placzek</h1>
                 <h3 class="header__text--herosecond">Modern. Zukunftsbewusst. Chancenorientiert.</h3>
-                <button class="button">kontakt</button>
+                <a href="#kontakt" id="header_kontakt" class="abutton"><button class="button">kontakt</button></a>
             </div>
         </section>
         <section class="ich" id="über-mich">
@@ -110,7 +110,7 @@
                     <p class="ich__wrapper--content-kontakt__text">Du hast auch große Träume? Erfolg? Karriere? Freiheit?
                         Du willst deinen eigenen Weg gehen und neue Abenteuer erleben?</p>
                     <p class="ich__wrapper--content-kontakt__text-action">Nimm jetzt deine Zukunft in die Hand und komm mit!</p>
-                    <button class="button ich__wrapper--content-kontakt__button">kontakt</button>
+                    <a href="#kontakt" id="ich_kontakt"><button class="button ich__wrapper--content-kontakt__button">kontakt</button></a>
                 </div>
             </div>
         </section>
@@ -303,16 +303,18 @@
                         <div class="kontakt__wrapper--elemente-elementeRight_clock">
                             <div class="kontakt__wrapper--elemente-elementeRight_clock-ico"></div>
                             <p class="kontakt__wrapper--elemente-elementeRight_clock-heading"><span>Öffnungszeiten</span></p>
-                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Mo - Mi: 9:00-12:30 / 14:30-17:30</p>
-                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Do - Fr: 9:00-12:30 </p>
-                        </div>
-                        
+                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Mo - Mi: 9:00-12:30 und 14:30-17:30</p>
+                            <p class="kontakt__wrapper--elemente-elementeRight_clock-text kontaktText">Do - Fr: 9:00-12:30</p>
+                        </div>                        
                     </div>
+                </div>
+                <div class="kontakt__wrapper--formular">
+
                 </div>
             </div>
         </section>
     </main>
-
+    <footer class="footer"></footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/main.js"></script>
